--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1{
+            color: red;
+        }
+        p{
+            color: blue;
+        }
+    </style>
 </head>
+
 <body>
     <section>
         <h1> World Best coder</h1>
         <p>ritik nanwani is the wolrd best coder </p>
-        
+
     </section>
 </body>
 </html>
